@@ -10,6 +10,8 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import pl.maciejsusala.aiheadergenerator.dto.FormDataDTO;
+import pl.maciejsusala.aiheadergenerator.dto.HeaderResponseDTO;
 
 import java.util.Collections;
 import java.util.List;
@@ -34,56 +36,36 @@ class OpenAiServiceImplTest {
     }
 
     @Test
-    void createPrompts() {
-        String formField1 = "Zwiększenie sprzedaży";
-        String formField2 = "brak zaufania";
-        String formField3 = "nasz produkt";
-
-        List<String> prompts = openAiServiceImpl.createPrompts(formField1, formField2, formField3);
-
-        assertEquals(3, prompts.size());
-        assertEquals("Stwórz propozycję nagłówka, który przyciągnie uwagę odbiorcy, obiecując pokonanie OBIEKCJI i osiągnięcie CELU za pomocą PRODUKTU. Nagłówek powinien mieć nie więcej niż 15 wyrazów. CEL = Zwiększenie sprzedaży OBIEKCJA = brak zaufania PRODUKT = nasz produkt", prompts.getFirst());
-    }
-
-    @Test
-    void createPrompts_withNullFields() {
-        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.createPrompts(null, "brak zaufania", "nasz produkt"));
-        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.createPrompts("Zwiększenie sprzedaży", null, "nasz produkt"));
-        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.createPrompts("Zwiększenie sprzedaży", "brak zaufania", null));
-    }
-
-    @Test
-    void createPrompts_withEmptyFields() {
-        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.createPrompts("", "brak zaufania", "nasz produkt"));
-        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.createPrompts("Zwiększenie sprzedaży", "", "nasz produkt"));
-        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.createPrompts("Zwiększenie sprzedaży", "brak zaufania", ""));
-    }
-
-
-
-    @Test
-    void generateHeaders_withValidPrompts() {
-        String prompt = "Test prompt";
+    void generateHeaders_validInput() {
+        FormDataDTO formData = new FormDataDTO("goal", "objection", "product");
         ChatCompletionChoice choice = new ChatCompletionChoice();
-        choice.setMessage(new ChatMessage("assistant", "Generated header"));
-        ChatCompletionResult response = new ChatCompletionResult();
-        response.setChoices(Collections.singletonList(choice));
+        choice.setMessage(new ChatMessage("assistant", "Generated Header"));
+        ChatCompletionResult result = new ChatCompletionResult();
+        result.setChoices(List.of(choice, choice, choice)); // Mocking multiple choices
 
-        when(openAiService.createChatCompletion(any(ChatCompletionRequest.class))).thenReturn(response);
+        when(openAiService.createChatCompletion(any(ChatCompletionRequest.class))).thenReturn(result);
 
-        List<String> headers = openAiServiceImpl.generateHeaders(Collections.singletonList(prompt));
+        HeaderResponseDTO response = openAiServiceImpl.generateHeaders(formData);
 
-        assertEquals(1, headers.size());
-        assertEquals("Generated header", headers.getFirst());
+        assertEquals(List.of("Generated Header", "Generated Header", "Generated Header"), response.headers());
     }
 
     @Test
-    void generateHeaders_withNullPrompts() {
-        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.generateHeaders(null));
+    void generateHeaders_nullInput() {
+        FormDataDTO formData = new FormDataDTO(null, "objection", "product");
+
+        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.generateHeaders(formData));
     }
 
     @Test
-    void generateHeaders_withEmptyPrompts() {
-        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.generateHeaders(Collections.emptyList()));
+    void generateHeaders_emptyInput() {
+        FormDataDTO formData = new FormDataDTO("", "objection", "product");
+
+        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.generateHeaders(formData));
+    }
+
+    @Test
+    void generateHeadersFromPrompts_emptyPrompts() {
+        assertThrows(IllegalArgumentException.class, () -> openAiServiceImpl.generateHeadersFromPrompts(Collections.emptyList()));
     }
 }
